--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@material-ui/styles": "^4.1.2",
     "@material/slider": "^3.1.0",
     "axios": "^0.19.0",
+    "dotenv-cli": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router": "^5.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-slick": "^0.24.0",
@@ -17,7 +19,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "dotenv -e .env.prod react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
