--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "slick-carousel": "^1.8.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "dotenv -e .env.dev react-scripts start",
     "build": "dotenv -e .env.prod react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
